syntax = "proto3";

package contract.v1;

message Events {
    repeated Approval approvals = 1;
    repeated ApprovalForAll approval_for_alls = 2;
    repeated OwnershipTransferred ownership_transferreds = 3;
    repeated Transfer transfers = 4;
}

message Approval {
    string trx_hash = 1;
    uint32 log_index = 2;
    bytes owner = 3;
    bytes approved = 4;
    string token_id = 5;
}

message ApprovalForAll {
    string trx_hash = 1;
    uint32 log_index = 2;
    bytes owner = 3;
    bytes operator = 4;
    bool approved = 5;
}

message OwnershipTransferred {
    string trx_hash = 1;
    uint32 log_index = 2;
    bytes previous_owner = 3;
    bytes new_owner = 4;
}

message Transfer {
    string trx_hash = 1;
    uint32 log_index = 2;
    bytes from = 3;
    bytes to = 4;
    string token_id = 5;
}

message BlockInfo {
    uint64 block_number = 1;
    string block_hash = 2;
    string parent_hash = 3;
}

message BlockInfos {
    repeated BlockInfo block_infos = 1;
}

message HashedBlockInfo {
    uint64 block_number = 1;
    string hash = 2;
}